# SLAM_Labs

./: .gitignore
Lab3/Mini-SLAM/: CMakeLists.txt  KeyFrameTrajectory.txt  trajectory.txt
Lab3/Mini-SLAM/Apps/: mono_euroc  mono_tumrgbd
Lab3/Mini-SLAM/Data/: TUMRGBD.yaml
Lab3/Mini-SLAM/Evaluation/: evaluate_ate_scale.py
Lab3/Mini-SLAM/Modules/Map/: Map.h
Lab3/Mini-SLAM/Modules/Matching/: DescriptorMatching.cc  DescriptorMatching.h
Lab3/Mini-SLAM/Modules/Optimization/: g2oTypes.h
Lab3/Mini-SLAM/Results/floor/Task3/test1/: trajectory.txt  values.txt
Lab3/Mini-SLAM/Results/floor/Task3/test2/: trajectory.txt  values.txt
Lab3/Mini-SLAM/Results/floor/Task3/test3/: trajectory.txt  values.txt
Lab3/Mini-SLAM/Results/floor/Task3/test4/: trajectory.txt  values.txt
Lab3/Mini-SLAM/Results/floor/Task4/test1/: trajectory.txt  values.txt
Lab3/Mini-SLAM/Results/floor/Task4/test2/: trajectory.txt  values.txt
Lab3/Mini-SLAM/Results/floor/Task4/test3/: trajectory.txt  values.txt
Lab3/Mini-SLAM/Results/floor/Task4/test4/: trajectory.txt  values.txt
Lab3/Mini-SLAM/Results/xyz/Task3/test1/: trajectory.txt  values.txt
Lab3/Mini-SLAM/Results/xyz/Task3/test2/: trajectory.txt  values.txt
Lab3/Mini-SLAM/Results/xyz/Task3/test3/: trajectory.txt  values.txt
Lab3/Mini-SLAM/Results/xyz/Task3/test4/: trajectory.txt  values.txt
Lab3/Mini-SLAM/Results/xyz/Task4/test1/: trajectory.txt  values.txt
Lab3/Mini-SLAM/Results/xyz/Task4/test2/: trajectory.txt  values.txt
Lab3/Mini-SLAM/Results/xyz/Task4/test3/: trajectory.txt  values.txt
lab1/: README.txt  (+1 more)
(+52 files in other folders)
